--- a/src/app/components/basic-form/basic-form.component.html
+++ b/src/app/components/basic-form/basic-form.component.html
@@ -2,10 +2,14 @@
   <p>
     Name: {{ nameField.value }}
     <input type="text" [formControl]="nameField" />
-    <button (click)="getNameValue()">Get value</button>
+
+    <button (click)="getNameValue()">Get Value</button>
+
     <!-- <code>
-    <pre>{{ nameField | json }}</pre>
-  </code> -->
+        <pre>
+            {{ nameField | json }}
+        </pre>
+    </code> -->
   </p>
 
   <p>
@@ -29,7 +33,42 @@
   </p>
 
   <p>
-    Phone: {{ ageField.value }}
+    Month: {{ monthField.value }}
+    <input type="month" [formControl]="monthField" />
+  </p>
+
+  <p>
+    Age: {{ ageField.value }}
     <input type="number" [formControl]="ageField" />
+  </p>
+
+  <p>
+    Password: {{ passwordField.value }}
+    <input type="password" [formControl]="passwordField" />
+  </p>
+
+  <p>
+    Range Price: {{ priceField.value }}
+    <input type="range" [formControl]="priceField" min="0" max="100" />
+  </p>
+
+  <p>
+    Wekend: {{ weekField.value }}
+    <input type="week" [formControl]="weekField" />
+  </p>
+
+  <p>
+    Date and time: {{ timefield.value }}
+    <input type="datetime-local" [formControl]="timefield" />
+  </p>
+
+  <p>
+    Search: {{ searchField.value }}
+    <input type="search" [formControl]="searchField" />
+  </p>
+
+  <p>
+    Description: {{ descriptionField.value }}
+    <textarea type="text" [formControl]="descriptionField"> </textarea>
   </p>
 </div>
