--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,24 @@
 /* You can add global styles to this file, and also import other style files */
+input {
+  &.ng-valid {
+    border: 2px solid green;
+  }
+
+  &.ng-invalid {
+    border: 2px solid red;
+  }
+
+  &.ng-untouched {
+    border: 2px solid;
+  }
+}
+.error-message {
+  opacity: 0;
+  transition: all 0.5s ease-in;
+  &.active {
+    opacity: 1;
+  }
+  & strong {
+    color: darkred;
+  }
+}
