feat: Usando FormGroup para agrupar multiples campos

--- a/src/app/components/basic-form/basic-form.component.html
+++ b/src/app/components/basic-form/basic-form.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+  <h1>Basic Form</h1>
   <p>
     Name: {{ nameField.value }} Valid: {{ nameField.valid }}
     <input type="text" [formControl]="nameField" />
