--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,7 @@
     <ul>
       <li><a routerLink="/">Home</a></li>
       <li><a routerLink="/basic-form">Basic Form</a></li>
+      <li><a routerLink="/form-group">Form Group</a></li>
     </ul>
   </nav>
 </header>
