--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,17 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
-input {
-  &.ng-valid {
-    border: 2px solid green;
-  }
 
-  &.ng-invalid {
-    border: 2px solid red;
-  }
-
-  &.ng-untouched {
-    border: 2px solid;
-  }
+.container {
+  padding-left: 25%;
+  width: 50%;
 }
+
 .error-message {
   opacity: 0;
   transition: all 0.5s ease-in;
@@ -21,4 +14,16 @@ input {
   & strong {
     color: darkred;
   }
+}
+
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+mat-form-field {
+  width: 100%;
 }
