feat: validaciones custom & validaciones grupales en Angular Forms

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,7 @@
       <li><a routerLink="/basic-form">BasicForm</a></li>
       <li><a routerLink="/form-group">FormGroup</a></li>
       <li><a routerLink="/form-builder">FormBuilder</a></li>
+      <li><a routerLink="/register">Register</a></li>
     </ul>
   </nav>
 </header>
