--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,7 @@
       <li><a routerLink="/form-group">FormGroup</a></li>
       <li><a routerLink="/form-builder">FormBuilder</a></li>
       <li><a routerLink="/register">Register</a></li>
+      <li><a routerLink="/form-array">FormArray</a></li>
     </ul>
   </nav>
 </header>
