feat: Crea tu propia librería de componentes con CVA o Control Value Accesor

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,7 @@
       <li><a routerLink="/form-builder">FormBuilder</a></li>
       <li><a routerLink="/register">Register</a></li>
       <li><a routerLink="/form-array">FormArray</a></li>
+      <li><a routerLink="/cva">Control Value Accesor</a></li>
     </ul>
   </nav>
 </header>
